# Niri-Settings-GTK4

./: .gitignore  Cargo.toml  README.md  niri_settings.html
src/: error.rs  main.rs  settings.css  settings_backend.rs  settings_ui.rs
src/ipc/: mod.rs  types.rs
src/settings_backend/: kdl.rs  keybinds.rs  mod.rs  shell.rs  tools.rs  types.rs
src/settings_ui/: extra_pages.rs  extra_pages_ui.rs  helpers.rs  helpers_ui.rs  input_pages.rs  input_pages_ui.rs  mod.rs  outputs_page.rs  outputs_page_ui.rs  rules_pages.rs  rules_pages_ui.rs  shell_pages.rs  shell_pages_ui.rs
