[package]
name = "niri-settings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "niri-settings"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
glib = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
futures = "0.3"
