[package]
name = "niri-settings"
version = "0.2.0"
edition = "2021"
description = "A GTK4 configuration editor for the Niri Wayland compositor"
repository = "https://github.com/CamRed25/Niri-Settings-GTK4"
keywords = ["niri", "wayland", "gtk4", "configuration"]
categories = ["gui", "config"]
publish = false

[[bin]]
name = "niri-settings"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
glib = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
futures = "0.3"
kdl = "4.7"
